--- a/project/static/css/success.css
+++ b/project/static/css/success.css
@@ -27,3 +27,11 @@ body{
     margin-top: 150px;
 
 }
+#a{
+    color: cornflowerblue;
+    font-family: Poppins, sans-serif;
+    font-size: 30px;
+    position: absolute;
+    top: 65%;
+    left: 47%;
+}
