--- a/project/static/css/login.css
+++ b/project/static/css/login.css
@@ -1,5 +1,4 @@
 @import "fontawesome-free-6.1.1-web/css/all.css";
-@import "bootstrap.min.css";
 body{
     margin: 0;
     padding: 0;
@@ -78,11 +77,12 @@ form a{
     padding: 0 0 0 80px;
 }
 
-.notification is-danger{
-    align-content: center;
-    color: white;
+#not{
     background: red;
-    font-family: Poppins, sans-serif;
+    padding-left: 50px;
+    color: white;
+    padding-top: 12px;
+    height: 25px;
 }
 
 .form-check{
