--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -7,7 +7,7 @@
         <div class="header">LOGIN FORM</div>
         {% with messages = get_flashed_messages() %}
         {% if messages %}
-        <div class="notification is-danger">
+        <div id="not" class="notification is-danger">
             {{ messages[0] }}
         </div>
         {% endif %}
@@ -17,12 +17,7 @@
             <input name="password" id="pswrd" type="password" placeholder="Password" required>
             <i class="fas fa-lock" onclick="show()"></i>
             <input type="submit" value="Login">
-             <div class="form-check">
-                <input name="remember" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">
-                    Remember
-                </label>
-            </div>
+             <a href="#">Forgot Password ?</a>
         </form>
     </div>
 <script>
