--- a/project/templates/sign.html
+++ b/project/templates/sign.html
@@ -6,7 +6,7 @@
         <div class="header">SIGN IN FORM</div>
         {% with messages = get_flashed_messages() %}
         {% if messages %}
-        <div class="notification is-danger">
+        <div id="not" class="notification is-danger">
             {{ messages[0] }}. Go to <a href="{{url_for('auth.login')}}">login page</a>
         </div>
         {% endif %}
@@ -18,7 +18,6 @@
             <input name="password" id="pswrd" type="password" placeholder="Password" required>
             <i class="fas fa-lock" onclick="show()"></i>
             <input type="submit" value="Sign in">
-            <a href="#">Forgot Password ?</a>
         </form>
     </div>
     <script>
